ballerina_istio_gw.yaml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "Gateway"
metadata:
  annotations: {}
  labels: {}
  name: "ballerina-time-service-gateway"
spec:
  selector:
    istio: "ingressgateway"
  servers:
  - hosts:
    - "*"
    port:
      name: "http"
      number: 80
      protocol: "HTTP"
